--- a/app/src/main/res/layout/fragment_main_market_info.xml
+++ b/app/src/main/res/layout/fragment_main_market_info.xml
@@ -4,56 +4,50 @@
     android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/finestWhite">
+    android:background="@color/bg_color">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:elevation="6dp">
+        android:elevation="6dp">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsingToolbarLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginStart="64dp"
-            app:layout_scrollFlags="scroll|enterAlways"
-            >
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <RelativeLayout
+                android:id="@+id/market_info_layout"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginTop="?attr/actionBarSize"
+                android:background="@color/trade_red"
+                android:minHeight="100dp">
+
+            </RelativeLayout>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                android:minHeight="?attr/actionBarSize"
-                app:collapseIcon="@mipmap/app_logo"
                 app:layout_collapseMode="pin"
-                app:popupTheme="@style/Theme.ToolBar.Base"
-                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-                <!--app:layout_collapseMode="pin"-->
+                app:theme="@style/Theme.ToolBar.Base">
+
                 <TextView
+                    style="@style/tv_white_and_small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Clock" />
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:minHeight="100dp"
-            android:background="@color/trade_red"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:layout_scrollFlags="scroll|enterAlways">
-
-        </RelativeLayout>
-
         <android.support.design.widget.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:layout_collapseMode="pin"
-            app:layout_scrollFlags="scroll|enterAlways"
+            android:layout_height="30dp"
+            android:background="@color/color_005eaa"
             app:tabGravity="fill"
             app:tabIndicatorColor="#ffffffff"
             app:tabMode="fixed"
@@ -61,122 +55,121 @@
     </android.support.design.widget.AppBarLayout>
 
 
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-     <android.support.v4.widget.NestedScrollView
-         android:layout_width="match_parent"
-         android:layout_height="match_parent"
-         android:fillViewport="true"
-         app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-         <LinearLayout
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:orientation="vertical">
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-             <android.support.design.widget.TextInputLayout
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/et_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Username" />
+            </android.support.design.widget.TextInputLayout>
 
-                 <EditText
-                     android:id="@+id/et_name"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:hint="Username" />
-             </android.support.design.widget.TextInputLayout>
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-             <android.support.design.widget.TextInputLayout
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/et_password"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Password" />
+            </android.support.design.widget.TextInputLayout>
 
-                 <EditText
-                     android:id="@+id/et_password"
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:hint="Password" />
-             </android.support.design.widget.TextInputLayout>
+            <ImageView
+                android:id="@+id/img_drawable_compat1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-             <ImageView
-                 android:id="@+id/img_drawable_compat1"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content" />
+            <ImageView
+                android:id="@+id/img_drawable_compat2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
-             <ImageView
-                 android:id="@+id/img_drawable_compat2"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/btn_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="AAAAA" />
 
-             <Button
-                 android:id="@+id/btn_1"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="AAAAA" />
+            <Button
+                android:id="@+id/btn_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="BBBBB" />
 
-             <Button
-                 android:id="@+id/btn_2"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="BBBBB" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Yo Yo" />
 
-             <Button
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="Yo Yo" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Yo Yo" />
 
-             <Button
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="Yo Yo" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Yo Yo" />
 
-             <Button
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="Yo Yo" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Yo Yo" />
 
-             <Button
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="Yo Yo" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Yo Yo" />
 
-             <Button
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="Yo Yo" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Yo Yo" />
 
-             <Button
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="Yo Yo" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Yo Yo" />
 
-             <Button
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="Yo Yo" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Yo Yo" />
 
-             <Button
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="Yo Yo" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Yo Yo" />
 
-             <Button
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="Yo Yo" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Yo Yo" />
 
-             <Button
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="Yo Yo" />
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Yo Yo" />
 
-             <Button
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="Yo Yo" />
-
-             <Button
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="Yo Yo" />
-         </LinearLayout>
-     </android.support.v4.widget.NestedScrollView>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Yo Yo" />
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
