--- a/app/src/main/res/layout/bg_sliding_refresh.xml
+++ b/app/src/main/res/layout/bg_sliding_refresh.xml
@@ -2,22 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:background="@color/color_512da8"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn_open_market"
+    <TextView
         style="@style/tv_red_and_normal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:padding="@dimen/margin_normal"
-        android:text="打开行情页面" />
+        android:text="developed by Kangqiao" />
 
-    <Button
-        android:id="@+id/btn_open_h5"
+    <TextView
         style="@style/tv_red_and_normal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:padding="@dimen/margin_normal"
-        android:text="打开FinestWebView页面" />
+        android:text="http://www.jzsec.com" />
 </LinearLayout>
