--- a/app/src/main/res/layout/market/layout/fragment_kline_market_info.xml
+++ b/app/src/main/res/layout/market/layout/fragment_kline_market_info.xml
@@ -1,8 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_2095f2"
+    android:background="@color/bg_color"
     android:orientation="vertical">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@color/text_color_yellow" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="@color/finestGray"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <RadioGroup
+            android:id="@+id/rg_kline"
+            android:background="@drawable/shape_bg_tab_not_checked"
+            android:orientation="horizontal"
+            android:layout_margin="1px"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <RadioButton
+                android:id="@+id/rb_day_line"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:button="@null"
+                android:checked="true"
+                android:layout_weight="1"
+                android:padding="@dimen/margin_small"
+                android:background="@drawable/selector_shape_bg_tab"
+                android:text="日线" />
+
+            <RadioButton
+                android:id="@+id/rb_week_line"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:button="@null"
+                android:layout_weight="1"
+                android:padding="@dimen/margin_small"
+                android:background="@drawable/selector_shape_bg_tab"
+                android:text="周线" />
+
+            <RadioButton
+                android:id="@+id/rb_month_line"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:button="@null"
+                android:layout_weight="1"
+                android:padding="@dimen/margin_small"
+                android:background="@drawable/selector_shape_bg_tab"
+                android:text="月线" />
+
+            <RadioButton
+                android:id="@+id/rb_minute_line"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@drawable/selector_shape_bg_tab"
+                android:button="@null"
+                android:layout_weight="1"
+                android:padding="@dimen/margin_small"
+                android:drawableRight="@mipmap/ic_triangle"
+                android:gravity="center"
+                android:text="分钟" />
+        </RadioGroup>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <TextView
+            style="@style/tv_blue_and_normal"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:padding="@dimen/margin_small"
+            android:background="@drawable/shape_bg_tab_checked"
+            android:gravity="center_vertical"
+            android:text="前复权" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/trade_red" />
 </LinearLayout>
