--- a/app/src/main/res/layout/market/layout/layout_market_toolbar.xml
+++ b/app/src/main/res/layout/market/layout/layout_market_toolbar.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/market_operate_height"
+    android:layout_height="@dimen/market_toolbar_height"
     android:layout_gravity="bottom"
-    android:background="@color/color_005eaa">
+    android:background="@color/color_43d28d">
 
     <FrameLayout
         android:id="@+id/fl_toolbar_container"
