--- a/app/src/main/res/layout/market/layout/view_market_pankou_info.xml
+++ b/app/src/main/res/layout/market/layout/view_market_pankou_info.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_height="match_parent"
     android:layout_marginTop="?attr/actionBarSize"
-    android:background="@color/trade_red"
-    android:minHeight="100dp">
+    android:background="@color/trade_red">
 
     <FrameLayout
         android:id="@+id/fl_pankou_container"
