--- a/app/src/main/res/layout/market/layout/pop_complex_right.xml
+++ b/app/src/main/res/layout/market/layout/pop_complex_right.xml
@@ -2,19 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/margin_small"
+    android:layout_marginRight="@dimen/margin_small"
     android:background="@mipmap/bg_popwin_down"
     android:gravity="center"
     android:orientation="vertical">
 
+
     <TextView
-        android:id="@+id/tv_minute_60"
+        android:id="@+id/tv_ex_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="@dimen/margin_small"
         android:textSize="@dimen/text_size_small"
         android:textColor="@color/text_color_gray_3"
-        android:text="60分钟" />
+        android:text="除权" />
 
     <View
         android:layout_width="match_parent"
@@ -22,14 +25,14 @@
         android:background="@color/divider_line" />
 
     <TextView
-        android:id="@+id/tv_minute_30"
+        android:id="@+id/tv_complex_after_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="@dimen/margin_small"
         android:textSize="@dimen/text_size_small"
         android:textColor="@color/text_color_gray_3"
-        android:text="30分钟" />
+        android:text="后复权" />
 
     <View
         android:layout_width="match_parent"
@@ -37,28 +40,13 @@
         android:background="@color/divider_line" />
 
     <TextView
-        android:id="@+id/tv_minute_15"
+        android:id="@+id/tv_complex_before_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="@dimen/margin_small"
         android:textSize="@dimen/text_size_small"
         android:textColor="@color/text_color_gray_3"
-        android:text="15分钟" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:background="@color/divider_line" />
-
-    <TextView
-        android:id="@+id/tv_minute_5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="@dimen/margin_small"
-        android:textSize="@dimen/text_size_small"
-        android:textColor="@color/text_color_gray_3"
-        android:text="5分钟" />
+        android:text="前复权" />
 
 </LinearLayout>
