自定义键盘的整合

--- a/app/src/main/res/drawable/switch_thumb_stock.xml
+++ b/app/src/main/res/drawable/switch_thumb_stock.xml
@@ -6,7 +6,7 @@
         android:height="40dp">
     </size>
     <solid
-        android:color="@android:color/white">
+        android:color="@android:color/transparent">
     </solid>
 
 </shape>
