--- a/app/src/main/res/layout/my/layout/keyboardview_layout.xml
+++ b/app/src/main/res/layout/my/layout/keyboardview_layout.xml
@@ -23,7 +23,7 @@
         android:background="@android:color/transparent"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:keyBackground="@drawable/keyboard_key"
+        android:keyBackground="@drawable/bg_key"
         android:keyTextColor="@color/text_color_white"
         android:keyTextSize="@dimen/text_size_small"
         android:visibility="visible" />
